cleaned up the code by creating some helper functions + fixed a bug for hcs credentials.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ include(GitVersionMacro)
 include(TimestampMacro)
 include(ReplicatorCredentialsMacro)
 include(AddQmlImportPathMacro)
+include(DeployConfigFilesHelpers)
 
 # common for 'apps' and 'components' that use resource files
 add_qml_import_path(PATH ":/")
