--- a/apps/DeveloperStudio/CMakeLists.txt
+++ b/apps/DeveloperStudio/CMakeLists.txt
@@ -141,13 +141,7 @@ if(IS_DIRECTORY "${STRATA_HOST_CORE_INTERNAL_PATH}/assets/config/sds")
 endif()
 list(APPEND SDS_CONFIG_PATHS_LIST ${CMAKE_HOME_DIRECTORY}/assets/config/sds)
 
-foreach(CONFIG_PATH IN LISTS SDS_CONFIG_PATHS_LIST)
-    file(GLOB TEMP_FILES_LIST
-        RELATIVE ${CONFIG_PATH}
-        ${CONFIG_PATH}/*.config
-    )
-    list(APPEND APPS_CORESW_SDS_CONFIG_CHOICES ${TEMP_FILES_LIST})
-endforeach()
+find_all_config_files("${SDS_CONFIG_PATHS_LIST}" "*.config" APPS_CORESW_SDS_CONFIG_CHOICES)
 
 if(NOT APPS_CORESW_SDS_CONFIG)
     if("sds_qa.config" IN_LIST APPS_CORESW_SDS_CONFIG_CHOICES)
@@ -162,21 +156,7 @@ if(NOT APPS_CORESW_SDS_CONFIG IN_LIST APPS_CORESW_SDS_CONFIG_CHOICES)
     message(FATAL_ERROR "Specify 'APPS_CORESW_SDS_CONFIG'. Must be one of ${APPS_CORESW_SDS_CONFIG_CHOICES}")
 endif()
 
-find_file(SDS_CONFIG_ABSOLUTE_PATH 
-    NAMES "${APPS_CORESW_SDS_CONFIG}"
-    PATHS ${SDS_CONFIG_PATHS_LIST}
-    NO_DEFAULT_PATH
-    REQUIRED
-)
-
-message("deploying ${SDS_CONFIG_ABSOLUTE_PATH}")
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        ${SDS_CONFIG_ABSOLUTE_PATH}
-        $<TARGET_FILE_DIR:${PROJECT_NAME}>/sds.config
-    COMMENT "Deploying 'sds.config'..."
-    VERBATIM
-)
+deploy_config_file("${SDS_CONFIG_PATHS_LIST}" ${APPS_CORESW_SDS_CONFIG} "sds.config")
 
 # LC: start 'hcs' process from strata (will be handled by strata monitor in near future)
 set_source_files_properties(main.cpp source/SDSModel.cpp source/config/ConfigFile.cpp PROPERTIES
