--- a/apps/hcs3/CMakeLists.txt
+++ b/apps/hcs3/CMakeLists.txt
@@ -83,31 +83,18 @@ if(IS_DIRECTORY "${STRATA_HOST_CORE_INTERNAL_PATH}/assets/config/hcs/credentials
 endif()
 list(APPEND HCS_CONFIG_PATHS_LIST ${CMAKE_HOME_DIRECTORY}/assets/config/hcs/credentials)
 
-foreach(CONFIG_PATH IN LISTS HCS_CONFIG_PATHS_LIST)
-    file(GLOB TEMP_FILES_LIST
-        RELATIVE ${CONFIG_PATH}
-        ${CONFIG_PATH}/*.config
-    )
-    list(APPEND APPS_CORESW_HCS_CONFIG_CHOICES ${TEMP_FILES_LIST})
-endforeach()
-
-foreach(CREDENTIALS_PATH IN LISTS HCS_CONFIG_PATHS_LIST)
-    file(GLOB TEMP_FILES_LIST
-        RELATIVE ${CREDENTIALS_PATH}
-        ${CREDENTIALS_PATH}/*.json
-    )
-    list(APPEND APPS_CORESW_HCS_CREDENTIALS_PATH_CHOICES ${TEMP_FILES_LIST})
-endforeach()
+find_all_config_files("${HCS_CONFIG_PATHS_LIST}" "*.config" APPS_CORESW_HCS_CONFIG_CHOICES)
+find_all_config_files("${HCS_CONFIG_PATHS_LIST}" "*.json" APPS_CORESW_HCS_CREDENTIALS_CHOICES)
 
 if(NOT APPS_CORESW_HCS_CREDENTIALS)
-    if("qa.json" IN_LIST APPS_CORESW_HCS_CREDENTIALS_PATH_CHOICES)
+    if("qa.json" IN_LIST APPS_CORESW_HCS_CREDENTIALS_CHOICES)
         set(APPS_CORESW_HCS_CREDENTIALS qa.json CACHE STRING "Desired HCS configuration file with credentials." FORCE)
     else()
         set(APPS_CORESW_HCS_CREDENTIALS template.json CACHE STRING "Desired HCS configuration file with credentials." FORCE)
     endif()
 endif()
 
-set_property(CACHE APPS_CORESW_HCS_CREDENTIALS PROPERTY STRINGS ${HCS_CREDENTIALS_LOCATION_CHOICES})
+set_property(CACHE APPS_CORESW_HCS_CREDENTIALS PROPERTY STRINGS ${APPS_CORESW_HCS_CREDENTIALS_CHOICES})
 
 find_file(HCS_CREDENTIALS_ABSOLUTE_PATH 
     NAMES "${APPS_CORESW_HCS_CREDENTIALS}"
@@ -181,20 +168,22 @@ if(NOT APPS_CORESW_HCS_CONFIG IN_LIST APPS_CORESW_HCS_CONFIG_CHOICES)
     message(FATAL_ERROR "Specify 'APPS_CORESW_HCS_CONFIG'. Must be one of ${APPS_CORESW_HCS_CONFIG_CHOICES}")
 endif()
 
-find_file(HCS_CONFIG_ABSOLUTE_PATH 
-    NAMES "${APPS_CORESW_HCS_CONFIG}"
-    PATHS ${HCS_CONFIG_PATHS_LIST}
-    NO_DEFAULT_PATH
-    REQUIRED
-)
+deploy_config_file("${HCS_CONFIG_PATHS_LIST}" ${APPS_CORESW_HCS_CONFIG} "hcs.config")
 
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    ${HCS_CONFIG_ABSOLUTE_PATH}
-    $<TARGET_FILE_DIR:${PROJECT_NAME}>/hcs.config
-    COMMENT "Deploying 'hcs.config'..."
-    VERBATIM
-)
+# find_file(HCS_CONFIG_ABSOLUTE_PATH 
+#     NAMES "${APPS_CORESW_HCS_CONFIG}"
+#     PATHS ${HCS_CONFIG_PATHS_LIST}
+#     NO_DEFAULT_PATH
+#     REQUIRED
+# )
+
+# add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy_if_different
+#     ${HCS_CONFIG_ABSOLUTE_PATH}
+#     $<TARGET_FILE_DIR:${PROJECT_NAME}>/hcs.config
+#     COMMENT "Deploying 'hcs.config'..."
+#     VERBATIM
+# )
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     QT_DEPRECATED_WARNINGS
