added OpenSSL/SSLeay license to openssl module

--- a/components/openssl/CMakeLists.txt
+++ b/components/openssl/CMakeLists.txt
@@ -1,6 +1,6 @@
 if (CMAKE_BUILD_TYPE STREQUAL "OTA")
     project(OpenSSL
-        DESCRIPTION "OpenSSL libraries"
+        DESCRIPTION "OpenSSL Libraries"
         LANGUAGES NONE
     )
 
