SCI: dialog to discover and connect BLE devices

--- a/apps/SerialConsoleInterface/CMakeLists.txt
+++ b/apps/SerialConsoleInterface/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(${PROJECT_NAME} WIN32 MACOSX_BUNDLE
     SciPlatformSettings.cpp
     SciMockDeviceModel.cpp
     HexModel.cpp
+    SciBleDeviceModel.cpp
     qml.qrc
     images/images.qrc
 
