cmake: use proper variable type for external install location
Using PATH type allow in QtCreator and CMake-GUI app to traverse file system in standard way
instead of string like variable modifying.

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -18,7 +18,7 @@ if(EXTERN_INSTALL_DIR_PATH)
     endif()
     message(STATUS "EXTERN_INSTALL_DIR_PATH is : ${EXTERN_INSTALL_DIR_PATH}")
 else()
-    set(EXTERN_INSTALL_DIR_PATH ${CMAKE_BINARY_DIR}/${EXTERN_INSTALL_DIR_NAME} CACHE STRING "" FORCE)
+    set(EXTERN_INSTALL_DIR_PATH ${CMAKE_BINARY_DIR}/${EXTERN_INSTALL_DIR_NAME} CACHE PATH "" FORCE)
     message(STATUS "EXTERN_INSTALL_DIR_PATH is : ${EXTERN_INSTALL_DIR_PATH}")
 endif()
 
