--- a/libs/Board/Platform/CMakeLists.txt
+++ b/libs/Board/Platform/CMakeLists.txt
@@ -17,7 +17,7 @@ add_library(${PROJECT_NAME}
     src/Serial/SerialDevice.cpp
     src/Mock/MockDevice.cpp
     src/Mock/MockDeviceControl.cpp
-    src/Network/NetworkDevice.cpp
+    src/Tcp/TcpDevice.cpp
 
     src/Operations/Commands/BasePlatformCommand.cpp
     src/Operations/Commands/CmdGetFirmwareInfo.cpp
@@ -50,7 +50,7 @@ add_library(${PROJECT_NAME}
     include/Mock/MockDevice.h
     include/Mock/MockDeviceControl.h
     include/Mock/MockDeviceConstants.h
-    include/Network/NetworkDevice.h
+    include/Tcp/TcpDevice.h
 
     include/Operations/BasePlatformOperation.h
     include/Operations/Identify.h
@@ -65,7 +65,7 @@ target_include_directories(${PROJECT_NAME}
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Mock
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Operations
     PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Operations/Commands
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Network
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Tcp
 )
 
 target_link_libraries(${PROJECT_NAME}
