added basic test set for emited errors from Mock Devices

--- a/libs/Board/PlatformManager/test/CMakeLists.txt
+++ b/libs/Board/PlatformManager/test/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(${PROJECT_NAME}-test
     PlatformOperationsTest.cpp
     PlatformOperationsV2Test.cpp
     PlatformMessageTest.cpp
+    PlatformErrorsTest.cpp
     main.cpp
 )
 
