cmake: use proper order of project submodules
CMake is working on 2 phases - configuration & project files generation.
The first one is sequential i.e. the CMake option may be used after it
is defined.
In our case particular components depends if particular apps or features
are enabled (to speedup build).
Using this speedup optimization for 'extern' project would be possible
but it will require more changes.

This is regression; it was meantime fixed by commit 797404e.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,11 +82,12 @@ if(IS_DIRECTORY "${STRATA_PLATFORM_CONTROL_VIEWS}")
     add_subdirectory("${STRATA_PLATFORM_CONTROL_VIEWS}" "${CMAKE_BINARY_DIR}/strata-platform-control-views")
 endif()
 
+# Note: please be careful with following subdirectory order; there are dependencies!
 add_subdirectory(extern)
-add_subdirectory(components)
 add_subdirectory(apps)
 add_subdirectory(libs)
 add_subdirectory(utils)
+add_subdirectory(components)
 
 message(STATUS "=============================================================================")
 message(STATUS "QML import paths:")
